--- a/CVPage.css
+++ b/CVPage.css
@@ -59,6 +59,21 @@ body {
     padding-left: 20px;
 }
 
+@media screen and (max-width: 800px) {
+    .leftcolumn, .rightcolumn {   
+      width: 100%;
+      padding: 0;
+    }
+  }
+  
+  /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+  @media screen and (max-width: 400px) {
+    .nav a {
+      float: none;
+      width: 100%;
+    }
+  }
+
 .card {
     background-color: #ddd;
     padding: 20px; 
@@ -68,6 +83,12 @@ body {
 
 .card h2 {
     text-align: center;
+}
+
+.links{
+    display: block;
+    margin:auto;
+    text-align:center;
 }
 
 .container {
