--- a/ContactPage.css
+++ b/ContactPage.css
@@ -52,6 +52,21 @@ body {
     width: 40%;
     padding-left: 20px;
 }
+
+@media screen and (max-width: 800px) {
+    .leftcolumn, .rightcolumn {   
+      width: 100%;
+      padding: 0;
+    }
+  }
+  
+  /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+  @media screen and (max-width: 400px) {
+    .nav a {
+      float: none;
+      width: 100%;
+    }
+  }
   
 .card {
     background-color: #ddd;
