--- a/HomePage.css
+++ b/HomePage.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .header {
     padding: 30px;
     text-align: center;
@@ -32,11 +36,55 @@ body {
     background-color: #111;
 }
 
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.rightcolumn {
+    float: right;
+    width: 40%;
+    padding-left: 20px;
+}
+
+@media screen and (max-width: 800px) {
+    .leftcolumn, .rightcolumn {   
+      width: 100%;
+      padding: 0;
+    }
+  }
+  
+  /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+  @media screen and (max-width: 400px) {
+    .nav a {
+      float: none;
+      width: 100%;
+    }
+  }
+
+.card {
+    background-color: #ddd;
+    padding: 20px; 
+    margin-top: 20px;
+    border-radius: 25px;
+}
+
+.card h2 {
+    text-align: center;
+}
+
+audio {
+    border-radius: 25px;
+    float: right;
+}
+
 .grettings {
     padding: 20px;
     border: 1px solid gray;
     margin-top: 100px;
     color: #ddd;
+    border-radius: 25px;
 }
   
 .grettings h1 {
@@ -44,20 +92,6 @@ body {
     text-transform: uppercase;
 }
 
-.footer {
-    padding: 20px;
-    text-align: center;
-    background: #ddd;
-    margin-top: 20px;
-    border-radius: 25px;
-}
-
-.footer a {
-      text-decoration: none;
-      list-style-type: none;
-      text-align: center;
-      color: rgb(25, 0, 255);
-}
 
 
   
